# causalontology

./: .gitignore  BRANDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Causalontology_AGIs_Missing_Link_Manuscript_v1.txt  Causalontology_AGIs_Missing_Link_Manuscript_v10.txt  Causalontology_AGIs_Missing_Link_Manuscript_v11.txt  Causalontology_AGIs_Missing_Link_Manuscript_v12.txt  Causalontology_AGIs_Missing_Link_Manuscript_v13.txt  Causalontology_AGIs_Missing_Link_Manuscript_v14.txt  Causalontology_AGIs_Missing_Link_Manuscript_v15.txt  Causalontology_AGIs_Missing_Link_Manuscript_v16.txt  Causalontology_AGIs_Missing_Link_Manuscript_v17.txt  Causalontology_AGIs_Missing_Link_Manuscript_v3.txt  Causalontology_AGIs_Missing_Link_Manuscript_v5.txt  Causalontology_AGIs_Missing_Link_Manuscript_v6.txt  Causalontology_AGIs_Missing_Link_Manuscript_v7.txt  Causalontology_AGIs_Missing_Link_Manuscript_v8.txt  Causalontology_AGIs_Missing_Link_Outline_v10.txt  Causalontology_AGIs_Missing_Link_Outline_v11.txt  Causalontology_AGIs_Missing_Link_Outline_v2.txt  Causalontology_AGIs_Missing_Link_Outline_v4.txt  Causalontology_AGIs_Missing_Link_Outline_v5.txt  Causalontology_AGIs_Missing_Link_Outline_v6.txt  Causalontology_AGIs_Missing_Link_Outline_v7.txt  Causalontology_AGIs_Missing_Link_Outline_v8.txt  Causalontology_AGIs_Missing_Link_Outline_v9.txt  Causalontology_Standalone_Design_v10.txt  Causalontology_Standalone_Design_v11.txt  Causalontology_Standalone_Design_v12.txt  Causalontology_Standalone_Design_v13.txt  Causalontology_Standalone_Design_v14.txt  Causalontology_Standalone_Design_v15.txt  Causalontology_Standalone_Design_v17.txt  Causalontology_Standalone_Design_v19.txt  Causalontology_Standalone_Design_v22.txt  Causalontology_Standalone_Design_v23.txt  Causalontology_Standalone_Design_v24.txt  Causalontology_Standalone_Design_v26.txt  (+14 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: conformance.yml  publish.yml  release.yml
archive/: Causalontology_3_0_0_Release_Plan.txt  Causalontology_AGIs_Missing_Link_Manuscript_v11.txt  Causalontology_AGIs_Missing_Link_Manuscript_v2.txt  Causalontology_AGIs_Missing_Link_Manuscript_v4.txt  Causalontology_AGIs_Missing_Link_Manuscript_v9.txt  Causalontology_AGIs_Missing_Link_Outline.txt  Causalontology_AGIs_Missing_Link_Outline_v3.txt  Causalontology_AGIs_Missing_Link_Outline_v9.txt  Causalontology_Standalone_Design_v15.txt  Causalontology_Standalone_Design_v16.txt  Causalontology_Standalone_Design_v18.txt  Causalontology_Standalone_Design_v20.txt  Causalontology_Standalone_Design_v21.txt  Causalontology_Standalone_Design_v25.txt  Causalontology_Standalone_Design_v6.txt  Causalontology_Standalone_Design_v7.txt  Causalontology_Standalone_Design_v8.txt  README.md  README_2026-07-17T0414Z.md  README_2026-07-17T0443Z.md  README_2026-07-17T0505Z.md  README_2026-07-17T0548Z.md  README_2026-07-17T0728Z.md  README_2026-07-17T1005Z.md  README_2026-07-17T1554Z.md
bindings/: README.md
bindings/cpp/: CMakeLists.txt  README.md  conformance.cpp  run_conformance.sh
bindings/cpp/src/: bignum.cpp  bignum.hpp  canonical.cpp  canonical.hpp  ed25519.cpp  ed25519.hpp  jcs.cpp  jcs.hpp  json.cpp  json.hpp  schema.cpp  schema.hpp  semantics.cpp  semantics.hpp  sha2.cpp  sha2.hpp  signing.cpp  signing.hpp  store.cpp  store.hpp
bindings/csharp/: README.md
bindings/dart/: CHANGELOG.md  README.md  pubspec.yaml
bindings/elixir/: README.md  conformance.exs  mix.exs
bindings/go/: README.md  go.mod
bindings/haskell/: README.md  causalontology.cabal
bindings/haskell/app/: Conformance.hs
bindings/haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
bindings/haskell/dist-newstyle/packagedb/ghc-9.6.6/: causalontology-1.0.0-inplace.conf  causalontology-2.0.0-inplace.conf  package.cache
bindings/haskell/src/Causalontology/: Canonical.hs  Ed25519.hs  Jcs.hs  Json.hs  Schema.hs  Semantics.hs  Sha2.hs  Signing.hs  Store.hs
bindings/java/: README.md  pom.xml  run_conformance.sh
bindings/javascript/: README.md  causalontology.d.ts  causalontology.js  package.json  tsconfig.json
bindings/julia/: Project.toml  README.md  conformance.jl
bindings/kotlin/: README.md  build.gradle.kts  run_conformance.sh  settings.gradle.kts
bindings/lua/: README.md  causalontology-1.0.0-1.rockspec  causalontology-2.0.0-1.rockspec  causalontology-4.0.0-1.rockspec  conformance.lua
bindings/perl/: META.json  Makefile.PL  README.md  conformance.pl
bindings/php/: README.md  composer.json  conformance.php
bindings/python/: README.md  pyproject.toml
bindings/python/causalontology/: __init__.py  canonical.py  ed25519.py  schema.py  semantics.py  signing.py  store.py
bindings/python/causalontology.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bindings/python/tests/: run_conformance.py
bindings/r/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md  conformance.R
bindings/ruby/: README.md  causalontology.gemspec  conformance.rb
bindings/rust/: Cargo.toml  README.md
bindings/rust/spec_schema/: README.md  assertion.schema.json  attitude.schema.json  causal_relation_object.schema.json  continuant.schema.json  cro.schema.json  enrichment.schema.json  individual.schema.json  occurrent.schema.json  port.schema.json  stratum.schema.json  succession.schema.json  token.schema.json  token_causal_claim.schema.json
bindings/rust/src/: canonical.rs  lib.rs  schema.rs  semantics.rs  signing.rs  store.rs  wasm_abi.rs
bindings/rust/tests/: wasm_check.js
bindings/swift/: .gitignore  Package.swift  README.md
bindings/zig/: README.md  build.zig  build.zig.zon  conformance.zig  run_conformance.sh
conformance/: README.md  freeze_1_0_0.py  freeze_2_0_0.py
conformance/vectors/: v01_complete_cro_is_valid.json  v04_empty_causes_is_invalid.json  (+135 more)
docs/: Causalontology_4_0_0_Release_Plan.txt
examples/: quickstart.md
spec/: VERSIONS.md  causalontology.md  identity.md  provenance.md  safety.md  semantics.md  snapshot.md  store.md
(+199 files in other folders)
